@@ -1,3 +1,9 @@
+2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirinfo.c: Replace lfind() with local equivelent to 
+	avoid type mismatches on different platforms. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=1889
+
 2009-01-22  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tools/{fax2tiff.c,thumbnail.c,tiff2pdf.c,tiff2ps.c,tiffdump.c,
